# ljprint

./: .gitignore  AGENTS.md  PROTOCOL.md  README.md  pyproject.toml
docs/superpowers/specs/: 2026-07-18-feature-parity-design.md
src/luckjingle/: __init__.py  __main__.py  cli.py  printer.py  protocol.py  rendering.py  transport.py
src/luckjingle/completions/: _luckjingle_print  luckjingle_print.bash
tests/: test_cli.py  test_printer.py  test_protocol.py  test_rendering.py  test_transport.py
